refactor: 지하철 노선 인수 테스트 리팩토링 - 변수명, 클래스명 변경 - assert문 정리